istio-example/httpd/svc-httpd.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-svc
spec:
  selector:
    service: httpd
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-v1
spec:
  selector:
    app: httpd-v1
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-v2
spec:
  selector:
    app: httpd-v2
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
